Move warning suppression